[package]
name = "git_notes"
version = "1.0.0"
authors = ["NastyGamer <jones.m.987654321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10-alpha.2", features = ["blocking"] }
text_io = "0.1.8"
ansi_term = "0.12"

[profile.release]
overflow-checks = true
opt-level = 3